--- a/fnbot.shop.csproj
+++ b/fnbot.shop.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UseWPF>true</UseWPF>
     <StartupObject>fnbot.shop.App</StartupObject>
     <ApplicationIcon>icon.ico</ApplicationIcon>
@@ -59,6 +59,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\fnbot.shop.Signer\fnbot.shop.Signer.csproj" />
     <ProjectReference Include="fnbot.shop.Backend\fnbot.shop.Backend.csproj" />
     <ProjectReference Include="fnbot.shop.Fortnite\fnbot.shop.Fortnite.csproj" />
     <ProjectReference Include="fnbot.shop.Video\fnbot.shop.Video.csproj" />
